Bug 66125 - xf86-input-evdev Evdev Wheel Emulation Inertia=0 hangs X
Summary: xf86-input-evdev Evdev Wheel Emulation Inertia=0 hangs X
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/evdev (show other bugs)
Version: 7.4 (2008.09)
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-24 11:54 UTC by main.haarp
Modified: 2013-06-30 22:11 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description main.haarp 2013-06-24 11:54:50 UTC
Using evdev-2.7.3. I set that value to 0 and tested wheel emulation - the server hung. the log gets flooded with:

evdev: TPPS/2 IBM TrackPoint: dropping event due to full queue!

Thinking back, it probably wasn't the brightest idea of mine. Still, 0 should not be an acceptable value for this option.
Comment 1 Peter Hutterer 2013-06-26 21:07:53 UTC
http://patchwork.freedesktop.org/patch/13918/
Comment 2 Peter Hutterer 2013-06-30 22:11:10 UTC
commit 356565111a6bb98f15fbaaf4f527aed8c87b477b
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Thu Jun 27 05:47:38 2013 +1000

    Don't allow a wheel emulation inertia of 0 (#66125)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.